my-project/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: springapp-ingress
  namespace: combined
spec:
  # tls:
  # - hosts:
  #   - ecom.ingress.first.first-proj.shoot.canary.k8s-hana.ondemand.com
  #   secretName: ecom-secret-tls
  rules:
  - host: java-app.ingress.first.first-proj.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
        - backend:
            serviceName: springapp-internal-service
            servicePort: 8080
  
  - host: ecom.ingress.first.first-proj.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
        - backend:
            serviceName: djangoapp-internal-service
            servicePort: 8000

  - host: mongo-express.ingress.first.first-proj.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
        - backend:
            serviceName: mongo-express-internal-service
            servicePort: 8081
